# BRAINTIP

./: README.md  __init__.py  config.yml  main.py  pyproject.toml
auth/: request_authencator.py  token_generator.py
bot/: available_tools.py  core.py  model_providers.py  tools_registry.py  weather.py
routers/: bot_router.py
schemas/: __init__.py  request_schemas.py  response_schemas.py
services/: bot_service.py
utils/: load_config.py  logger.py  urls.py
